# sprint_planning_env

./: .dockerignore  .gitignore  COLAB_TRAINING.md  Dockerfile  PROJECT_ANALYSIS.md  README.md  __init__.py  agent.py  app.py  check_routes.py  client.py  colab_train_sprintboard_grpo.ipynb  colab_train_sprintboard_grpo_rl_only.ipynb  evaluate_agent.py  evaluate_training.py  inference.py  llm_autosolve.py  mini-blog.md  models.py  openenv.yaml  pyproject.toml  requirements-train.txt  requirements.txt  train_grpo.py  train_grpo_unsloth.py
assets/: baseline_scores.csv  training_summary.json
scripts/: baseline_eval.py  generate_submission_plots.py  publish_blog_to_hub_discussion.py
server/: META.code-workspace  app.py  board.py  command_parser.py  environment.py  grader.py  reward.py  tasks.py
sprint_planning_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_commands.py  test_reward_hacking.py
